[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Formal_Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Buttons/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buttons/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 17.0
margin_top = 17.0
margin_right = 182.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 165.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Spike Game 2021"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 24.0
margin_right = 165.0
margin_bottom = 95.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 165.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 1.0
margin_bottom = 21.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 25.0
margin_bottom = 45.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 49.0
margin_bottom = 69.0

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false
color = Color( 0, 0, 0, 0 )

[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
